--- a/service/public/style.css
+++ b/service/public/style.css
@@ -45,3 +45,14 @@ button {
     border: 2px solid red;
     text-align: center;
 }
+
+.image {
+    position: absolute;
+    top: 1%;
+    left: 43%;
+    right: 43%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-color: aqua;
+}
